unpackaged/main/default/objects/FObjectOne__c/FObjectOne__c.object-meta.xml
<CustomObject>
    <description>An object used in Forccea test methods.</description>
    <label>FObjectOne</label>
    <nameField>
        <displayFormat>FO1-{00000}</displayFormat>
        <label>FObjectOne Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FObjectOnes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>