unpackaged/main/default/objects/FObjectOne__c/fields/TestAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>TestAutoNumber__c</fullName>
    <displayFormat>Test{000000}</displayFormat>
    <label>TestAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>