unpackaged/main/default/objects/FObjectOne__c/fields/TestCheckbox__c.field-meta.xml
<CustomField>
    <fullName>TestCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestCheckbox</label>
    <type>Checkbox</type>
</CustomField>