unpackaged/main/default/objects/FObjectOne__c/fields/TestDate__c.field-meta.xml
<CustomField>
    <fullName>TestDate__c</fullName>
    <label>TestDate</label>
    <type>Date</type>
</CustomField>