unpackaged/main/default/objects/FObjectOne__c/fields/TestEmail__c.field-meta.xml
<CustomField>
    <fullName>TestEmail__c</fullName>
    <label>TestEmail</label>
    <type>Email</type>
</CustomField>