unpackaged/main/default/objects/FObjectOne__c/fields/TestExternalId__c.field-meta.xml
<CustomField>
    <fullName>TestExternalId__c</fullName>
    <externalId>true</externalId>
    <label>TestTextExternalId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>