unpackaged/main/default/objects/FObjectOne__c/fields/TestFormulaNumber__c.field-meta.xml
<CustomField>
    <fullName>TestFormulaNumber__c</fullName>
    <formula>TestDecimal__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormulaNumber</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>