unpackaged/main/default/objects/FObjectOne__c/fields/TestGeolocation__c.field-meta.xml
<CustomField>
    <fullName>TestGeolocation__c</fullName>
    <label>TestGeolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>