unpackaged/main/default/objects/FObjectOne__c/fields/TestInteger__c.field-meta.xml
<CustomField>
    <fullName>TestInteger__c</fullName>
    <label>TestInteger</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>