unpackaged/main/default/objects/FObjectOne__c/fields/TestIntegerUnique__c.field-meta.xml
<CustomField>
    <fullName>TestIntegerUnique__c</fullName>
    <label>TestIntegerUnique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>