unpackaged/main/default/objects/FObjectOne__c/fields/TestLookup__c.field-meta.xml
<CustomField>
    <fullName>TestLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TestLookup</label>
    <referenceTo>FObjectTwo__c</referenceTo>
    <relationshipLabel>FObjectOnes</relationshipLabel>
    <relationshipName>FObjectOnes</relationshipName>
    <type>Lookup</type>
</CustomField>