unpackaged/main/default/objects/FObjectOne__c/fields/TestMultiPicklistA__c.field-meta.xml
<CustomField>
    <fullName>TestMultiPicklistA__c</fullName>
    <label>TestMultiPicklistA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d1</fullName>
            </value>
            <value>
                <fullName>d2</fullName>
            </value>
            <value>
                <fullName>d3</fullName>
            </value>
            <value>
                <fullName>d4</fullName>
            </value>
            <value>
                <fullName>d5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>