unpackaged/main/default/objects/FObjectOne__c/fields/TestPercent__c.field-meta.xml
<CustomField>
    <fullName>TestPercent__c</fullName>
    <label>TestPercent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>