unpackaged/main/default/objects/FObjectOne__c/fields/TestPicklistD__c.field-meta.xml
<CustomField>
    <fullName>TestPicklistD__c</fullName>
    <description>This field has the TestCheckbox as a controlling field.</description>
    <label>TestPicklistD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TestCheckbox__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>d0</fullName>
            </value>
            <value>
                <fullName>d1</fullName>
            </value>
            <value>
                <fullName>d2</fullName>
            </value>
            <value>
                <fullName>d3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>