unpackaged/main/default/objects/FObjectOne__c/fields/TestText__c.field-meta.xml
<CustomField>
    <fullName>TestText__c</fullName>
    <label>TestText</label>
    <length>50</length>
    <type>Text</type>
</CustomField>