unpackaged/main/default/objects/FObjectOne__c/fields/TestTextArea__c.field-meta.xml
<CustomField>
    <fullName>TestTextArea__c</fullName>
    <label>TestTextArea</label>
    <type>TextArea</type>
</CustomField>