unpackaged/main/default/objects/FObjectOne__c/fields/TestTextAreaLong__c.field-meta.xml
<CustomField>
    <fullName>TestTextAreaLong__c</fullName>
    <label>TestTextAreaLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>