unpackaged/main/default/objects/FObjectOne__c/fields/TestTextAreaRich__c.field-meta.xml
<CustomField>
    <fullName>TestTextAreaRich__c</fullName>
    <label>TestTextAreaRich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>