unpackaged/main/default/objects/FObjectOne__c/fields/TestTextRequired__c.field-meta.xml
<CustomField>
    <fullName>TestTextRequired__c</fullName>
    <label>TestTextRequired</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>