unpackaged/main/default/objects/FObjectOne__c/fields/TestTime__c.field-meta.xml
<CustomField>
    <fullName>TestTime__c</fullName>
    <label>TestTime</label>
    <type>Time</type>
</CustomField>