unpackaged/main/default/objects/FObjectOne__c/fields/TestUrl__c.field-meta.xml
<CustomField>
    <fullName>TestUrl__c</fullName>
    <label>TestUrl</label>
    <type>Url</type>
</CustomField>